  - enhancement: added the ability to add attachments to device models [chilan/ravvar]
  - enhancement: show model files containers in models list [ravvar]
  - enhancement: show network devices files containers in devices list [ravvar]
  - enhancement: allow to send customer message quickly using icon near mail and phone contacts [chilan]

version 24.0 (2019-05-16):

  - enhancement: script automating the installation of LMS + PostgreSQL in the Centos 7
    system has been added to the "sample" catalog [darton]
  - enhancement: script automating the installation of LMS + MariaDB in the Centos 7
    system has been added to the "sample" catalog [darton]
  - enhancement: allow to filter network devices by territ not specified [chilan]
  - enhancement: helpdesk/rt: introduced ticket netdevice assignment [interduo]
  - enhancement: added %queue symbol support for helpdesk notification templates [chilan]
  - enhancement: allow to select company/division for financial data export  [chilan]
  - enhancement: added support for helpdesk notification for event add form [chilan]
  - enhancement: invoices.hide_expositor - variable to hide expositor in pdf invoice
    generated by tcpdf [interduo]
  - enhancement: invoices.show_customerid - variable to show customerid in pdf invoice
    generated by tcpdf [interduo]
  - enhancement: added user notification about helpdesk ticket status change
    - phpui.ticket_state_change_notify configuration variable controls if
    it is triggered [chilan]
  - enhancement: current division properties are copied to new receipts [chilan]
  - improvement: resolved tickets in quick search displayed as blended [chilan]
  - enhancement: additional operations on node search result - node group assign
    and unassign [chilan]
  - enhancement: added helper icons in quick search suggestions (customers, node,
    tickets) [chilan]
  - enhancement: added support for tariff burst properties [chilan]