@@ -4027,7 +4027,7 @@ $_LANG['Default categories'] = 'Domyślne kategorie';
 
 $_LANG['Category $a has been added to ticket.'] = 'Kategoria $a została dodana do zgłoszenia.';
 $_LANG['Category $a has been removed from ticket.'] = 'Kategoria $a została usunięta ze zgłoszenia.';
-$_LANG['Add network node:'] = 'Dodaj węzeł sieciowy:';
+$_LANG['Add network node'] = 'Dodaj węzeł sieciowy';
 
 $_LANG['New device'] = 'Nowe urządzenie';
 
